--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,9 @@ Django==1.10.5
 django-extensions==1.7.6
 ipython==5.2.2
 ipython-genutils==0.1.0
+linecache2==1.0.0
+mysqlclient==1.3.9
+nose==1.3.7
 packaging==16.8
 pexpect==4.2.1
 pickleshare==0.7.4
@@ -11,7 +14,10 @@ prompt-toolkit==1.0.13
 ptyprocess==0.5.1
 Pygments==2.2.0
 pyparsing==2.1.10
+selenium==3.0.2
 simplegeneric==0.8.1
 six==1.10.0
+traceback2==1.4.0
 traitlets==4.3.1
+unittest2==1.1.0
 wcwidth==0.1.7
