--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ appdirs==1.4.0
 decorator==4.0.11
 Django==1.10.5
 django-extensions==1.7.6
+django-nose==1.4.4
 ipython==5.2.2
 ipython-genutils==0.1.0
 linecache2==1.0.0
